      PF1, PF2, PF3, PF4 keys.
      
    * Fixed a bug in VT100Terminal: getCSIParam() 
      where the the paramters would be parsed into 
      incorrect array indices when blank (implied) 
      parameters were encountered. This is was messing 
      up some token processing where the position of 
      the parameters in the array was important like 
      [VT100Screen: -setTopBottom].
      

2003-02-10	fabian
    * Cleaned up showCursor code
    * Incorparated Japanese nib files from OHKAWA
    * Fixed a bug in scrollUp
    
2003-02-09	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added drag-and-drop support to the PTYTabView class. 
      Tabs can now be moved within and between windows.
      

2003-02-07	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Workaround for a problem in Address Book where the 
      scrollbar was not being activated when it should have 
      been on load. It was being activated only on window 
      resize. Looks like a Cocoa bug, but I put in a 
      workaround of telling the NSTableView that the 
      number of rows had changed after loading the addressbook.
      
    * This time really fixed the cursor updating problem. 
      Root cause was VT100: -deleteCharacters that sometimes 
      caused OLD_CURSOR_INDEX to end up with the incorrect 
      value.
	

2003-02-06	Ujwal S. Sathyam <ujwal@setlurgroup.com>
    
    * Now displaying tab number in label to make it easier 
      to switch between tabs using function keys.
      
    * Changed version number in Info.plist to 0.6.3.
      

2003-02-05	fabian
    * Fixed a bug in showCursor that causes the loss of
      attributes. That partially solves the double-width
      characters problem.
    * Localized new interface additions for zh_CN and zh_TW.
    * 0.6.3!
      
2003-02-04	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added menu item in tabview contextual menu to move 
      tab to new window.
      
    * Simplified PseudoTerminal code by removing direct 